Introduction de nouveaux nœuds pour les titres et mwe

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-_*
+convert*
+correction.sh
+transfer.sh
+diff_train.txt
+experiment/*
+utils_grs/correction.grs
+utils_grs/remove_comma.grs
+*DS_Store
