--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ convert*
 correction.sh
 transfer.sh
 diff_train.txt
-experiment/*
+experiment/_*
 utils_grs/correction.grs
 utils_grs/remove_comma.grs
 *DS_Store
