Fix a few rules

--- a/exemples/Makefile
+++ b/exemples/Makefile
@@ -1,3 +1,5 @@
+GREW=grew_dev
+
 doc:
 	@echo "----------------------------------------------------------------"
 	@echo "sud:     convert ud.conll into _sud_conv.conll and show diff"
@@ -13,14 +15,14 @@ draw:
 	rm -rf _sud_gold
 	splitter sud.conll _sud_gold
 	find _sud_gold -name "*.conll" -type f -print | sed "s/.conll$$//" | xargs -I {} make "{}.svg"
-	grew transform -grs ../grs/SUD_to_UD.grs -i sud.conll -o _ud.conll
+	${GREW} transform -grs ../grs/SUD_to_UD.grs -i sud.conll -o _ud.conll
 	rm -rf _ud_auto
 	splitter _ud.conll _ud_auto
 	# ----
 	rm -rf _ud_gold
 	splitter ud.conll _ud_gold
 	find _ud_gold -name "*.conll" -type f -print | sed "s/.conll$$//" | xargs -I {} make "{}.svg"
-	grew transform -grs ../grs/UD_to_SUD.grs -i ud.conll -o _sud.conll
+	${GREW} transform -grs ../grs/UD_to_SUD.grs -i ud.conll -o _sud.conll
 	rm -rf _sud_auto
 	splitter _sud.conll _sud_auto
 	# ----
@@ -28,27 +30,27 @@ draw:
 	dep_diff -d1 _ud_gold -d2 _ud_auto -svg _ud_diff
 
 gui_ud:
-	grew gui -grs ../grs/SUD_to_UD.grs -i sud.conll
+	${GREW} gui -grs ../grs/SUD_to_UD.grs -i sud.conll
 
 gui_sud:
-	grew gui -grs ../grs/UD_to_SUD.grs -i ud.conll
+	${GREW} gui -grs ../grs/UD_to_SUD.grs -i ud.conll
 
 gui_mud:
-	grew gui -grs ../grs/SUD_to_UD.grs -i more_sud.conll
+	${GREW} gui -grs ../grs/SUD_to_UD.grs -i more_sud.conll
 
 gui_msud:
-	grew gui -grs ../grs/UD_to_SUD.grs -i more_ud.conll
+	${GREW} gui -grs ../grs/UD_to_SUD.grs -i more_ud.conll
 
 sud:
-	grew transform -grs ../grs/UD_to_SUD.grs -i ud.conll -o _sud_conv.conll
+	${GREW} transform -grs ../grs/UD_to_SUD.grs -i ud.conll -o _sud_conv.conll
 	opendiff sud.conll _sud_conv.conll
 
 ud:
-	grew transform -grs ../grs/SUD_to_UD.grs -i sud.conll -o _ud_conv.conll
+	${GREW} transform -grs ../grs/SUD_to_UD.grs -i sud.conll -o _ud_conv.conll
 	opendiff ud.conll _ud_conv.conll
 
 full_ud:
-	grew transform -grs ../grs/SUD_to_UD.grs -strat full -i sud.conll -o _ud_full_conv.conll
+	${GREW} transform -grs ../grs/SUD_to_UD.grs -strat full -i sud.conll -o _ud_full_conv.conll
 
 clean:
 	rm -rf _*
