--- a/converter/Makefile
+++ b/converter/Makefile
@@ -26,8 +26,8 @@ gui:
 	grew gui -grs grs/UD_to_SUD.grs -i UD_French-GSD/fr_gsd-ud-dev.conllu
 
 dc:
-	grew transform -grs grs/UD_to_SUD.grs -i UD_French-GSD/fr_gsd-ud-dev.conllu -o _fr_gsd-ud-dev.sud.conllu
-	grew transform -grs grs/SUD_to_UD.grs -i _fr_gsd-ud-dev.sud.conllu -o _fr_gsd-ud-dev.dc.conllu
+	grew transform -grs grs/UD+_to_SUD.grs -i UD_French-GSD/fr_gsd-ud-dev.conllu -o _fr_gsd-ud-dev.sud.conllu
+	grew transform -grs grs/SUD_to_UD+.grs -i _fr_gsd-ud-dev.sud.conllu -o _fr_gsd-ud-dev.dc.conllu
 
 dc2:
 	grew transform -grs grs/UD_to_SUD.grs -i UD_French-GSD/fr_gsd-ud-dev.conllu -o _fr_gsd-ud-dev.sud2.conllu
