review of test part

--- a/converter/test/Makefile
+++ b/converter/test/Makefile
@@ -6,6 +6,8 @@ draw:
 	@make -C gsd draw
 	@make -C sequoia draw
 	@make -C web draw
+	@make -C impersonal_diathesis draw
+	@make -C pronominal_verbs draw
 	pandoc --metadata title="$(DATE)" -s -c github-pandoc.css diff.md -o index.html
 
 clean:
@@ -14,7 +16,17 @@ clean:
 	@make -C gsd clean
 	@make -C sequoia clean
 	@make -C web clean
+	@make -C impersonal_diathesis clean
+	@make -C pronominal_verbs clean
 	rm -f index.html
 
 lchn:
-	scp -r index.html github-pandoc.css basic coord gsd sequoia web $(slchn)/www/download/UD_SUD/
+	scp -r index.html github-pandoc.css \
+	basic \
+	coord \
+	gsd \
+	sequoia \
+	web \
+	impersonal_diathesis \
+	pronominal_verbs \
+	$(slchn)/www/download/UD_SUD/
