--- a/converter/test/Makefile_fr
+++ b/converter/test/Makefile_fr
@@ -11,15 +11,15 @@ draw:
 	echo "| id | SUD | UD |" >> _diff.md
 	echo "|:---:|:---:|:---:|" >> _diff.md
 	grep "# sent_id" ud.conll | cut -f 4 -d ' ' | sed 's#^\(.*\)$$#| `\1` | ![](_sud_diff/\1.svg) | ![](_ud_diff/\1.svg) |#' >> _diff.md
-	${GREW} transform -config sud -grs ../../grs/SUD_to_UD_fr.grs -strat FR_main -i sud.conll -o _ud.conll
-	${GREW} transform -config sud  -grs ../../grs/UD_to_SUD_fr.grs -strat FR_main -i ud.conll -o _sud.conll
+	${GREW} transform -config sud -grs ../../grs/fr_SUD_to_UD.grs -strat fr_main -i sud.conll -o _ud.conll
+	${GREW} transform -config sud  -grs ../../grs/fr_UD_to_SUD.grs -strat fr_main -i ud.conll -o _sud.conll
 	splitter -f sud.conll _sud_gold
 	splitter -f ud.conll _ud_gold
 	splitter -f _sud.conll _sud_auto
 	splitter -f _ud.conll _ud_auto
 	dep_diff -d1 _sud_gold -d2 _sud_auto -svg _sud_diff
 	dep_diff -d1 _ud_gold -d2 _ud_auto -svg _ud_diff
-	pandoc --metadata title="Conversion with SUD_to_UD_fr.grs and UD_to_SUD_fr.grs" -s _diff.md -o _diff.html
+	pandoc --metadata title="Conversion with fr_SUD_to_UD.grs and fr_UD_to_SUD.grs" -s _diff.md -o _diff.html
 
 clean:
 	rm -rf _*
