--- a/tables/Makefile
+++ b/tables/Makefile
@@ -3,19 +3,19 @@ SUD=/users/guillaum/resources/sud-treebanks-v2.10
 
 sud_build:
 	mkdir -p sud
-	python build_table.py -f "*UD_*" -o sud/deps.json ${SUD} DEPS
+	python build_table.py -c "SUD 2.10" -f "*UD_*" -o sud/deps.json ${SUD} DEPS
 
 ud_build:
 	mkdir -p ud
-	python build_table.py -f "*UD_*" -o ud/deps.json ${UD} DEPS
-	python build_table.py -f "*UD_*" -o ud/feats.json ${UD} FEATS
-	python build_table.py -f "*UD_*" -o ud/misc.json ${UD} MISC
+	python build_table.py -c "UD 2.10" -f "*UD_*" -o ud/deps.json ${UD} DEPS
+	python build_table.py -c "UD 2.10" -f "*UD_*" -o ud/feats.json ${UD} FEATS
+	python build_table.py -c "UD 2.10" -f "*UD_*" -o ud/misc.json ${UD} MISC
 
 ud_feats:
 	mkdir -p ud
 	@for feat in PronType Gender VerbForm NumType Animacy Mood Poss NounClass Tense Reflex Number Aspect Foreign Case Voice Abbr Definite Evident Typo Degree Polarity Person Polite Clusivity ; do \
 		echo "================= Building table for feature: $$feat =================" ; \
-		python build_table.py -f "*UD_*" -o ud/$$feat.json ${UD} $$feat ; \
+		python build_table.py -c "UD 2.10" -f "*UD_*" -o ud/$$feat.json ${UD} $$feat ; \
 	done
 
 start:
