Review patterns for SUD deps

--- a/tables/sud_deps/appos.json
+++ b/tables/sud_deps/appos.json
@@ -3,7 +3,7 @@
   "grew_match": {
     "appos": {
       "code": [
-        "pattern {M -[appos]-> N}"
+        "pattern {M -[1=appos,!2]-> N}"
       ],
       "key": null,
       "users": 195
